--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
-    "server": "nodemon server.js",
-    "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\"",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\""
+    "client": "cd client && npm start",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "start": "node server.js",
+    "dev": "concurrently \"npm start\" \"cd client && npm start\""
   },
   "author": "",
   "license": "ISC",
