--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.5",
+    "node-fetch": "^3.0.0",
     "request": "^2.88.2"
   }
 }
