--- a/package.json
+++ b/package.json
@@ -1,29 +1,20 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build",
-    "start": "node server.js",
-    "client": "cd client && npm start",
-    "dev": "concurrently -n 'server,client' -c 'red,green'  \"nodemon server.js\" \"npm run client\""
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "cinci-attractions",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "concurrently": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
-<<<<<<< HEAD
-    "mongoose": "^6.0.5",
-    "nodemon": "^2.0.12"
-  }
-=======
     "jquery": "^3.6.0",
     "mdb-react-ui-kit": "^1.3.0",
     "mdb-ui-kit": "^3.9.0",
@@ -63,19 +54,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SethCodes/cinci-attractions.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SethCodes/cinci-attractions/issues"
-  },
-  "homepage": "https://github.com/SethCodes/cinci-attractions"
->>>>>>> edde549b537c2f92d9d04876338a69a13c676819
+  }
 }
