still fixing news api

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 ATLAS_URI=mongodb+srv://KableAcademy:Kable@cluster4.9l4dq.mongodb.net/cinci-attraction?retryWrites=true&w=majority
 
-HEADLINES_URI =https://newsapi.org/v2/everything?q=cincinnati&pageSize=8&apiKey=bbac26f2a1734825959bac16ed90df5c
+REACT_APP_HEADLINES_URI =https://newsapi.org/v2/everything?q=cincinnati&pageSize=8&apiKey=bbac26f2a1734825959bac16ed90df5c
